--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Sergey Lobachev</title>
+    </head>
+    <body>
+        <h1>Hello World</h1>
+        <img heigh="1000" weigh="1000" href="img.png">
+        <p>I'm hosted with GitHub Pages.</p>
+    </body>
 </html>
