--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Sergey Lobachev</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello Worlde</h1>
         <img heigh="1000" weigh="1000" href="img.png">
         <p>I'm hosted with GitHub Pages.</p>
     </body>
