--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Hello Worlde</h1>
-        <img heigh="1000" weigh="1000" href="img.png">
+        <img heigh="1000" weigh="1000" src="img.jpg">
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
