--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Sergey Lobachev</title>
+        <style>
+            .center {
+                text-align: center;
+            }
+            body {
+                background-color:rgba(27, 122, 222, 0.364);
+            }
+        </style>
     </head>
-    <body>
-        <h1>Hello Worlde</h1>
-        <img heigh="1000" weigh="1000" src="img.jpg">
-        <p>I'm hosted with GitHub Pages.</p>
+    <body id="body">
+        <a id="hh" target="_blank" href="https://hh.ru/resume/6cad5bb4ff0b1477d40039ed1f32767a557735">
+            <img src="hh.png" width="64" height="40">
+        </a>
+        <h1 class="center">Доброго времени суток.</h1>
+        <p class="center">I'm hosted with GitHub Pages.</p>
     </body>
 </html>
