--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
             .center {
                 text-align: center;
             }
-            body {
-                background-color:rgba(27, 122, 222, 0.364);
+            .containers {
+                margin-left: 300px;
+            }
+            p {
+                width: 300px;
+                text-align: left;
+                color: green;
             }
         </style>
     </head>
-    <body id="body">
+    <body>
         <a id="hh" target="_blank" href="https://hh.ru/resume/6cad5bb4ff0b1477d40039ed1f32767a557735">
             <img src="hh.png" width="64" height="40">
         </a>
-        <h1 class="center">Доброго времени суток.</h1>
-        <p class="center">I'm hosted with GitHub Pages.</p>
+            <h1 class="center">Сергей Лобачёв</h1>
+            <h2 class="containers">Образование</h2>
+            <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
     </body>
 </html>
