--- a/index.html
+++ b/index.html
@@ -3,27 +3,49 @@
     <head>
         <meta charset="utf-8">
         <title>Sergey Lobachev</title>
-        <style>
-            .center {
-                text-align: center;
-            }
-            .containers {
-                margin-left: 300px;
-            }
-            p {
-                width: 300px;
-                text-align: left;
-                color: green;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <a id="hh" target="_blank" href="https://hh.ru/resume/6cad5bb4ff0b1477d40039ed1f32767a557735">
-            <img src="hh.png" width="64" height="40">
+            <img src="hh.png" width="64" height="44">
         </a>
-            <h1 class="center">Сергей Лобачёв</h1>
-            <h2 class="containers">Образование</h2>
-            <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
-                Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+        <h1 class="center">Сергей Лобачёв</h1>
+        <div id="info">
+            <ul id="tableLeft">
+                <li>
+                    <h2 class="containers">Образование</h2>
+                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                </li>
+                <li>
+                    <h2 class="containers">Об</h2>
+                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                </li>
+                <li>
+                    <h2 class="containers">Об</h2>
+                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                </li>
+            </ul>
+            <ul id="tableRight">
+                <li>
+                    <h2 class="containers">Об</h2>
+                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                </li>
+                <li>
+                    <h2 class="containers">Об</h2>
+                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                </li>
+                <li>
+                    <h2 class="containers">Об</h2>
+                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                </li>
+            </ul>
+            <div style="clear: both"></div>
+        </div>
     </body>
 </html>
