--- a/index.html
+++ b/index.html
@@ -7,42 +7,52 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a id="hh" target="_blank" href="https://hh.ru/resume/6cad5bb4ff0b1477d40039ed1f32767a557735">
-            <img src="hh.png" width="84" height="64">
-        </a>
-        <h1 class="center">Сергей Лобачёв</h1>
+        <up style="background-color: green; height: 20px;"></up>
+        <h1 class="center"><img src="foto.png" width="300" height="220"><br>Сергей Лобачёв
+            <p class="subcenter"><img src="person.png" width="20" height="20">Возраст: 23 годa &nbsp;&nbsp; <img src="city.png" width="30" height="22">Город: Москва</p>
+        </h1>
         <div id="info">
-            <ul id="tableLeft">
-                <li>
-                    <h2 class="containers">Образование</h2>
-                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
-                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+            <ul id="tableLeft" class="ul">
+                <li class="containers">
+                    <h2 class="header">Образование</h2>
+                    <ul style="padding: 0px; margin: 0px;">
+                    <li class="containers"><p>Московский государственный технологический университет "Станкин", Москва
+                        /2020-2022г.</p><p>Магистр</p> 
+                        <p>Автоматизация технологических процессов и производств</p>
+                    <li class="containers"><p>Московский государственный технологический университет "Станкин", Москва
+                        /2016-2020г.</p><p>Бакалавр</p> 
+                        Автоматизация технологических процессов и производств</li>
+                    </ul>
                 </li>
-                <li>
-                    <h2 class="containers">Об</h2>
-                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
-                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                <li class="containers">
+                 
                 </li>
-                <li>
-                    <h2 class="containers">Об</h2>
-                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                <li class="containers">
+                    <h2 class="header">Об</h2>
+                    <p>Московский государственный технологический университет "Станкин", Москва <br></br>
                         Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
                 </li>
             </ul>
-            <ul id="tableRight">
-                <li>
-                    <h2 class="containers">Об</h2>
-                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
-                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+            <ul id="tableRight" class="ul">
+                <li class="containers">
+                    <h2 class="header">Контакты</h2>
+                    <img src="hh.png" width="25" height="20">&nbsp;<a id="hh" target="_blank" href="https://hh.ru/resume/6cad5bb4ff0b1477d40039ed1f32767a557735"> hh.ru </a><br></br>
+                    <img src="phone.png" width="25" height="17">&nbsp;<a href="tel: +79645307981">+7 (964) 530-79-81</a><br></br>
+                    <img src="mail.png" width="25" height="17">&nbsp;<a href="mailto: serg_lobachev@mail.ru">serg_lobachev@mail.ru</a> (предпочитаемый способ связи)
                 </li>
-                <li>
-                    <h2 class="containers">Об</h2>
-                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
-                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                <li class="containers">
+                    <h2 class="header">Навыки</h2>
+                    <ul style="padding: 0px">
+                    <li>JS</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Git</li>
+                    <li>Bash</li>
+                    </ul>
                 </li>
-                <li>
-                    <h2 class="containers">Об</h2>
-                    <p class="containers">Московский государственный технологический университет "Станкин", Москва <br></br>
+                <li class="containers">
+                    <h2 class="header">Об</h2>
+                    <p>Московский государственный технологический университет "Станкин", Москва <br></br>
                         Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
                 </li>
             </ul>
