--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
     <body>
         <up style="background-color: green; height: 20px;"></up>
         <h1 class="center"><img src="foto.png" width="300" height="220"><br>Сергей Лобачёв
-            <p class="subcenter"><img src="person.png" width="20" height="20">Возраст: 23 годa &nbsp;&nbsp; <img src="city.png" width="30" height="22">Город: Москва</p>
+            <p class="subcenter"><img src="person.png" width="20" height="20">&nbsp;Возраст: 23 годa &nbsp;&nbsp; <img src="city.png" width="30" height="22">&nbsp;Город: Москва</p>
         </h1>
         <div id="info">
             <ul id="tableLeft" class="ul">
+                <li class="containers">
+                    <h2 class="header">Желаемая должность</h2>
+                    <p>Frontend-разработчик</p>
+                </li>
+                <li class="containers">
+                    <h2 class="header">Навыки</h2>
+                    <ul style="padding: 0px">
+                    <li><div>JS</div><progress value="75" max="100"></progress></li>
+                    <li><div>HTML</div><progress value="90" max="100"></progress></li>
+                    <li><div>CSS</div><progress value="75" max="100"></progress></li>
+                    <li><div>Git</div><progress value="75" max="100"></progress></li>
+                    <li><div>Bash</div><progress value="100" max="100"></progress></li>
+                    </ul>
+                </li>
                 <li class="containers">
                     <h2 class="header">Образование</h2>
                     <ul style="padding: 0px; margin: 0px;">
@@ -24,36 +38,17 @@
                         Автоматизация технологических процессов и производств</li>
                     </ul>
                 </li>
-                <li class="containers">
-                 
-                </li>
-                <li class="containers">
-                    <h2 class="header">Об</h2>
-                    <p>Московский государственный технологический университет "Станкин", Москва <br></br>
-                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
-                </li>
             </ul>
             <ul id="tableRight" class="ul">
                 <li class="containers">
                     <h2 class="header">Контакты</h2>
                     <img src="hh.png" width="25" height="20">&nbsp;<a id="hh" target="_blank" href="https://hh.ru/resume/6cad5bb4ff0b1477d40039ed1f32767a557735"> hh.ru </a><br></br>
                     <img src="phone.png" width="25" height="17">&nbsp;<a href="tel: +79645307981">+7 (964) 530-79-81</a><br></br>
-                    <img src="mail.png" width="25" height="17">&nbsp;<a href="mailto: serg_lobachev@mail.ru">serg_lobachev@mail.ru</a> (предпочитаемый способ связи)
+                    <img src="mail.png" width="25" height="20">&nbsp;<a href="mailto: serg_lobachev@mail.ru">serg_lobachev@mail.ru</a> (предпочитаемый способ связи)
                 </li>
                 <li class="containers">
-                    <h2 class="header">Навыки</h2>
-                    <ul style="padding: 0px">
-                    <li>JS</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Git</li>
-                    <li>Bash</li>
-                    </ul>
-                </li>
-                <li class="containers">
-                    <h2 class="header">Об</h2>
-                    <p>Московский государственный технологический университет "Станкин", Москва <br></br>
-                        Институт Автоматизации и Робототехники <br></br> Автоматизация технологических процессов и производств</p>
+                    <h2 class="header">О себе</h2>
+                    <p>В последнее время проходил обучение в универстиете без возможности работать. В данный момент проходу обучение в Школе 21 (Ecole 42).</p>
                 </li>
             </ul>
             <div style="clear: both"></div>
