--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </li>
                 <li class="containers">
                     <h2 class="header">О себе</h2>
-                    <p>В последнее время проходил обучение в универстиете без возможности работать. В данный момент проходу обучение в Школе 21 (Ecole 42).</p>
+                    <p>В последнее время проходил обучение в университете без возможности работать. В данный момент прохожу обучение в Школе 21 (Ecole 42).</p>
                 </li>
             </ul>
             <div style="clear: both"></div>
