--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="background">
             <h1 class="center">
                 <br>
-                <img src="foto.png" width="300" height="225"><br>Сергей Лобачёв
+                <img src="foto.png" id="photo"><br>Сергей Лобачёв
                 <p class="subcenter"><img src="person.png" width="20" height="20">&nbsp;Возраст: 23 годa &nbsp;&nbsp; <img src="city.png" width="30" height="24">&nbsp;Город: Москва</p>
                 <br>
             </h1>
