--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                     </li>
                     <li class="containers">
                         <h2 class="header">О себе</h2>
-                        <p>В последнее время проходил обучение в университете без возможности работать. В данный момент прохожу обучение в Школе 21 (Ecole 42).</p>
+                        <p>В последнее время проходил обучение в университете без возможности работать. В данный момент прохожу обучение в Школе 21 (Ecole 42).
+                            Ссылка на мой профиль на Гитхабе: <br><a id="git" target="_blank" href="https://github.com/Redgenal">github.com</a>
+                        </p>
                     </li>
                 </ul>
                 <div style="clear: both"></div>
