--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="eu">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,14 +8,14 @@
     </head>
     <body>
         <div id="background">
-            <h1 class="center">
+            <div class="center">
                 <br>
-                <img src="foto.png" id="photo"><br>Сергей Лобачёв
-                <p class="subcenter"><img src="person.png" width="20" height="20">&nbsp;Возраст: 23 годa &nbsp;&nbsp; <img src="city.png" width="30" height="24">&nbsp;Город: Москва</p>
+                <img alt="photo" src="img/photo.png" id="photo"><br><b>Сергей Лобачёв</b>
+                <p class="subcenter"><img alt="person" src="img/person.png" width="20" height="20">&nbsp;Возраст: 23 годa &nbsp;&nbsp; <img alt="city" src="img/city.png" width="30" height="24">&nbsp;Город: Москва</p>
                 <br>
-            </h1>
+            </div>
             <div id="info">
-                <ul id="tableLeft" class="ul">
+                <ul class="ul">
                     <li class="containers">
                         <h2 class="header">Желаемая должность</h2>
                         <p>Frontend-разработчик</p>
@@ -42,12 +42,12 @@
                         </ul>
                     </li>
                 </ul>
-                <ul id="tableRight" class="ul">
+                <ul class="ul">
                     <li class="containers">
                         <h2 class="header">Контакты</h2>
-                        <img src="hh.png" width="20" height="20">&nbsp;<a id="hh" target="_blank" href="https://hh.ru/resume/6cad5bb4ff0b1477d40039ed1f32767a557735"> hh.ru </a><br></br>
-                        <img src="phone.png" width="17" height="17">&nbsp;<a href="tel: +79645307981">+7 (964) 530-79-81</a><br></br>
-                        <img src="mail.png" width="20" height="20">&nbsp;<a href="mailto: serg_lobachev@mail.ru">serg_lobachev@mail.ru</a> (предпочитаемый способ связи)
+                        <img alt="hh" src="img/hh.png" width="20" height="20">&nbsp;<a id="hh" target="_blank" href="https://hh.ru/resume/6cad5bb4ff0b1477d40039ed1f32767a557735"> hh.ru</a> <hr>
+                        <img alt="phone" src="img/phone.png" width="17" height="17">&nbsp;<a href="tel:+7(964)530-79-81">+7 (964) 530-79-81</a> <hr>
+                        <img alt="mail" src="img/mail.png" width="20" height="20">&nbsp;<a href="mailto:serg_lobachev@mail.ru">serg_lobachev@mail.ru</a> (предпочитаемый способ связи)
                     </li>
                     <li class="containers">
                         <h2 class="header">О себе</h2>
