--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
                     <li class="containers">
                         <h2 class="header">Навыки</h2>
                         <ul style="padding: 0px">
-                        <li><div>JS</div><progress value="65" max="100"></progress></li>
-                        <li><div>HTML</div><progress value="80" max="100"></progress></li>
-                        <li><div>CSS</div><progress value="75" max="100"></progress></li>
-                        <li><div>Git</div><progress value="75" max="100"></progress></li>
-                        <li><div>Bash</div><progress value="90" max="100"></progress></li>
+                        <li><div>JS</div><p>Работа с объектами, классами</p></li>
+                        <li><div>HTML</div><p>Кроссбраузерная и адаптивная верстка, float-позиционирование</p></li>
+                        <li><div>CSS</div><p>Настройка стилей, классов, работа с разметкой</p></li>
+                        <li><div>Bootstrap v2.3</div><p>Работа с набором готовых стилей, позиционирование через готовые классы 12-ти кратной разметки</p></li>
+                        <li><div>Git</div><p>Создание репозитория, git add, git commit, git push, git merge</p></li>
+                        <li><div>Bash</div><p>Кроссбраузерная и адаптивная верстка, float-позиционирование</p></li>
                         </ul>
                     </li>
                     <li class="containers">
@@ -51,8 +52,13 @@
                     </li>
                     <li class="containers">
                         <h2 class="header">О себе</h2>
-                        <p>В последнее время проходил обучение в университете без возможности работать. В данный момент прохожу обучение в Школе 21 (Ecole 42).
+                        <p>В последнее время проходил обучение в университете без возможности работать.<br> В данный момент прохожу обучение в Школе 21 (Ecole 42).<br>
                             Ссылка на мой профиль на Гитхабе: <br><a id="git" target="_blank" href="https://github.com/Redgenal">github.com</a>
+                        </p>
+                    </li>
+                    <li class="containers">
+                        <h2 class="header">Знание языков</h2>
+                        <p>Русский — Родной<br>Английский — B1 — Средний 
                         </p>
                     </li>
                 </ul>
