--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </li>
                     <li class="containers">
                         <h2 class="header">О себе</h2>
-                        <p>В последнее время проходил обучение в университете без возможности работать.<br> В данный момент прохожу обучение в Школе 21 (Ecole 42).<br>
+                        <p>В этом году закончил магистратуру с красным дипломом.<br> В данный момент прохожу обучение в Школе 21 (<a id="git" target="_blank" href="https://42.fr/en/homepage">Ecole 42</a>).<br>
                             Ссылка на мой профиль на Гитхабе: <br><a id="git" target="_blank" href="https://github.com/Redgenal">github.com</a>
                         </p>
                     </li>
