--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><div>CSS</div><p>Настройка стилей, классов, работа с разметкой</p></li>
                         <li><div>Bootstrap v2.3</div><p>Работа с набором готовых стилей, позиционирование через готовые классы 12-ти кратной разметки</p></li>
                         <li><div>Git</div><p>Создание репозитория, git add, git commit, git push, git merge</p></li>
-                        <li><div>Bash</div><p>Кроссбраузерная и адаптивная верстка, float-позиционирование</p></li>
+                        <li><div>Bash</div><p>Работа со скриптами и различными возможностями оболочки Bash</p></li>
                         </ul>
                     </li>
                     <li class="containers">
